--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "survey-core": "^1.9.101",
+    "survey-react": "^1.9.101",
+    "survey-react-ui": "^1.9.102"
   },
   "scripts": {
     "start": "cross-env PORT=4040 react-scripts start",
